# SSZ-HOW-TO-BEAM

./: ALL_CALCULATIONS_OUTPUT.txt  BASELINE_v0.9_AUDIT.md  CHANGELOG.md  CITATION.cff  COMPLETE_DOCUMENTATION.md  COMPLETE_KNOWLEDGE_BASE.md  COMPLETE_VALIDATION_OUTPUT.txt  COMPLETE_VALUE_ANALYSIS.md  CONTRIBUTING.md  CURRENT_STATUS.md  EXPECTED_RESULTS.md  FINAL_SUMMARY_REPORT.md  FULL_REPORT.md  FULL_REPORT_COMPLETE.md  FULL_REPORT_DETAILED.md  KNOWN_LIMITATIONS.md  LICENSE  MAXIMUM_DETAIL_REPORT.txt  Makefile  PERFECTION_CERTIFICATE.txt  PERFECTION_STATUS.md  QUICK_REFERENCE.md  README.md  README.md.old  REAL_EXECUTION_RESULTS.txt  REAL_TEST_RESULTS.txt  RELEASE_AUDIT_v0.8.0.md  RELEASE_AUDIT_v1.0.0.md  RELEASE_CHECKLIST.md  RELEASE_v0.9.0.md  RELEASE_v1.0.0.md  TEST_RESULTS.md  V0_8_FREEZE_REPORT.md  V0_9_DEVELOPMENT_PLAN.md  execute_all_calculations_verbose.py  execute_all_tests_maximum_detail.py  execute_real_tests.py  install.bat  install.sh  pyproject.toml  (+12 more)
docs/: 00_project_definition.md  01_ssz_beam_math_foundations.md  02_observable_method_assignment.md  03_regime_engine.md  04_energy_condition_classes.md  05_worldline_continuity.md  06_tidal_safety.md  07_beam_falsification_criteria.md  08_not_warp_not_wormhole.md  09_desy_hpc_roadmap.md  10_reproducibility.md  11_validation_levels.md  12_geodesic_transfer_formalism.md  13_radial_scaling_distance.md  14_holonomy_bridge_diagnostics.md  15_wave_operator_guardrails.md  17_bridge_metric_spec.md  18_mathematical_proof_status.md  19_api_reference.md  20_tutorial.md  21_open_problems.md  22_research_roadmap.md  23_final_assessment.md  24_lambda_crit_derivation.md  25_unresolved_solutions.md  28_tensor_array_guide.md  30_research_roadmap.md  CANONICAL_SSZ_REFERENCE.md  FALSIFICATION_GUIDE.md  SSZ_VALIDATION_FRAMEWORK.md  V0_9_TENSOR_CORE_ROADMAP.md  V1_0_ROADMAP.md
examples/: quickstart.py
extended_body_stress_proxy/: gradual_entry_protocol.py
numerical_gr/: pipeline.py  stability_monitor.py
scripts/: analyze_bridge.py  create_release_zip.py  install.sh  (+1 more)
(+189 files in other folders)
